--- a/.circleci/circleci.yaml
+++ b/.circleci/circleci.yaml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.9
-    working_directory: /go/src/github.com/WolfgangMau/chamg
+    working_directory: /go/src/github.com/WolfgangMau/chamgo
     steps:
       - checkout
       - run: make
@@ -12,7 +12,7 @@ jobs:
   release:
     docker:
       - image: circleci/golang:1.9
-    working_directory: /go/src/github.com/WolfgangMau/chamg
+    working_directory: /go/src/github.com/WolfgangMau/chamgo
     steps:
       - checkout
       - run: make package
